--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://127.0.0.1:5000/",
+  "proxy": "https://chatbot-a9wv.onrender.com/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
